overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cliet-tableaux-angular
spec:
  rules:
  - host: www.cliet-tableaux.fr
